# harfbuzz_rs

./: .gitignore  Cargo.toml  README.md  build.rs  harfbuzz-output.cc  update.sh  wrapper.h
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release.yml
examples/: simple.rs
src/: bindings.rs  buffer.rs  face.rs  font.rs  lib.rs  subset.rs  svg.rs  utils.rs
src/subset/: hb-glyph-to-svg-path.cc  hb-glyph-to-svg-path.h  hb-glyph-to-svg.cc  hb-glyph-to-svg.h
