[package]
name = "harfbuzz_rs_now"
version = "2.0.2-alpha.0"
authors = ["Manuel Reinhardt <manuel.rhdt@gmail.com>","KonghaYao <3446798488@qq.com>"]
description = "A high-level interface to HarfBuzz, exposing its most important functionality in a safe manner using Rust."
repository = "https://github.com/harfbuzz/harfbuzz_rs"
readme = "README.md"
keywords = ["text", "ffi", "textlayout", "shaping", "harfbuzz"]
categories = [
    "api-bindings",
    "external-ffi-bindings",
    "internationalization",
    "text-processing",
]
license = "MIT"
edition = "2021"
links = "harfbuzz"
include = [
    "src/*",
    "harfbuzz/src/*",
    "harfbuzz-output.cc",
    "build.rs",
]

[badges]
maintainence = { status = "passively-maintained" }

[features]
default = ["build-native-harfbuzz"]
build-native-harfbuzz = []

[dependencies]
rusttype = { version = "0.9", optional = true }
bitflags = "^1"

[build-dependencies]
cc = "1.0"
pkg-config = "0.3.24"

[lib]
doctest = false